add basic db connection; docker-compose.yml update
