# service/search_brands.go
@@ -1,0 +1,12 @@
+package service
+
+import (
+	"context"
+
+	gen "gitlab.com/cadaverine/pim-service/gen"
+)
+
+// SearchBrands ...
+func (s *PimService) SearchBrands(ctx context.Context, req *gen.SearchRequest) (*gen.Brands, error) {
+	return nil, nil
+}
